plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromExpectedTypeAlias/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in jvm module'")!>TypeAlias<!> {
    val x: String
}
